# LiteHttpd.FileServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: 403.html  404.html
configTemplate/: LiteHttpd.FileServer.json.in
source/: FileServerModule.cpp  FileServerModule.h  FileTemp.cpp  FileTemp.h  ModuleConfig.cpp  ModuleConfig.h
